--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 attrs==19.1.0
 backcall==0.1.0
+beautifulsoup4==4.8.0
 bleach==3.1.0
+bs4==0.0.1
 colorama==0.4.1
 decorator==4.4.0
 defusedxml==0.6.0
@@ -34,6 +36,7 @@ pyzmq==18.1.0
 qtconsole==4.5.2
 Send2Trash==1.5.0
 six==1.12.0
+soupsieve==1.9.2
 terminado==0.8.2
 testpath==0.4.2
 tornado==6.0.3
