--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,8 @@ mistune==0.8.4
 nbconvert==5.6.0
 nbformat==4.4.0
 notebook==6.0.0
+numpy==1.17.0
+pandas==0.25.0
 pandocfilters==1.4.2
 parso==0.5.1
 pickleshare==0.7.5
@@ -34,6 +36,7 @@ prompt-toolkit==2.0.9
 Pygments==2.4.2
 pyrsistent==0.15.4
 python-dateutil==2.8.0
+pytz==2019.2
 pywinpty==0.5.5
 pyzmq==18.1.0
 qtconsole==4.5.2
